--- a/Read/ReadMeWiki/06.Framework/13.View绘制流程分析.md
+++ b/Read/ReadMeWiki/06.Framework/13.View绘制流程分析.md
@@ -19,8 +19,11 @@
     - 5.3 draw绘制流程
 - 06.View绘制流程总结下
     - 6.1 Activity布局绘制
-- 07.View如何显示在屏幕
-
+- 07.View刷新操作
+    - 7.1 View如何显示在屏幕
+    - 7.2 requestLayout刷新
+    - 7.3 invalidate刷新
+    - 7.4 postInvalidate刷新
 
 
 ### 00.问题答疑思考
@@ -37,6 +40,9 @@
 - 布局：getWidth()方法和getMeasureWidth()区别呢？布局的设计思路是什么？
 - 布局：单个View的布局流程是怎么样的？如何理解布局中相对位置和绝对位置？什么情况下需要对控件重新布局？
 - 布局：以LinearLayout为例，完整布局流程是怎么样的。如果其中的一个孩子View修改了top高度，其布局流程会发生什么变化？
+- 绘制：在View中draw绘制思路是如何设计的？ViewGroup中dispatchDraw分发绘制设计思路是怎样的？
+- 绘制：说一下绘制中surface起到什么作用？draw里面绘制了那些东西，简要介绍一下？
+
 
 
 
@@ -389,7 +395,7 @@
 
 ### 05.performDraw绘制
 #### 5.1 performDraw源码流程
-- 从ViewRootImpl类中分析performDraw测量，这里是测量的入口
+- 从ViewRootImpl类中分析performDraw测量，这里是绘制的入口
     > ViewRootImpl#performDraw()，看源码可知调用了draw(fullRedrawNeeded)
     > ViewRootImpl#draw()，调用了mView的draw方法，这里的mView是我们的mDector，看一下draw方法的具体实现
     > ViewRootImpl#drawSoftware()，调用mSurface.lockCanvas方法获取一个Canvas对象，然后drawColor，translate，setScreenDensity等等。最后调用mView.draw(canvas)。
@@ -459,8 +465,8 @@
 
 
 
-
-### 07.View如何显示在屏幕
+### 07.View刷新操作
+#### 7.1 View如何显示在屏幕
 - 一个 view 究竟是如何显示在屏幕上的？
     - 一般都比较了解 view 渲染的三大流程，但是 view 的渲染远不止于此：此处以一个通用的硬件加速流程来表征
     - ![image](https://img-blog.csdnimg.cn/1a64ad8a867f40689eff87d592fea5b1.png)
@@ -482,7 +488,14 @@
 
 
 
+#### 7.2 requestLayout刷新
 
+
+
+#### 7.3 invalidate刷新
+
+
+#### 7.4 postInvalidate刷新
 
 
 
