--- a/Read/ReadBlogWiki/01.出发启程/03.一起来做个练习.md
+++ b/Read/ReadBlogWiki/01.出发启程/03.一起来做个练习.md
@@ -27,12 +27,14 @@
 
 #### 1.4 总体规划的方案
 - 这个作业从设想到执行，总体的规划方案可以分为：事前编织梦想——>事中详细规划和落地——>事后持续落实和总结。
+- ![image](https://img-blog.csdnimg.cn/c8fb4005419e4d45b9eca4cfa8813a9d.png)
 
 
 
 ### 02.事前大胆去想象
 #### 2.1 开始编辑目标
 - **先开始编织美梦，包括你想拥有的，你想做的，你想成为的，你想体验的**。现在，请坐下来，拿一张纸和一支笔，动手写下你的心愿。
+- ![image](https://img-blog.csdnimg.cn/07927d8b35c744839556a13723cf83e3.png)
 - 在你写的时候，不必管那些目标该用什么方式去达成，就是尽量写。直到你觉得没有什么可以写的时候，你可以看看下面几个问题并回答它们，这些问题会引导你去了解自已内心深处的渴求，这会花上一些时间，但你现在的努力，将是为下一步丰盛的收获作下基础。
 - 1）在你生活中，你认为哪五件事情最有价值？
 - 2）在你的生活中，有哪三个最重要的目标？可以先罗列10个目标然后再依次去除！
@@ -86,13 +88,16 @@
 
 
 
-#### 3.3 做完要去回顾
-- 当自己做完这一切，回顾过去，有那些你所列的资源会运用得很纯熟。回顾过去找出你认为最成功的两三次经验，仔细想想是做了什么特别的事，才造成事业、健康、财务、人际关系方面的成功，请记下这个特别的原因。
+#### 3.3 使用PDCA制定计划
+- 毕竟一开始目标或者远景规划得再好，如果没有落地执行，那么也产出不了任何价值。所谓 PDCA 执行法，就是把事情的执行过程分成四个环节：计划（Plan）、执行（Do）、检查（Check）和行动（Act），从而把控执行过程，保证具体事项高效高质地落地。
+- ![image](https://img-blog.csdnimg.cn/75d2c8335e4240388b4e8666b83fcbc6.png)
+
 
 
 
 #### 3.4 达到和未达到分析
 - 写下要达成目标本身所具有的条件。是坚持的毅力，还是好的方法，还是工具的优势，都写下来。
+- ![image](https://img-blog.csdnimg.cn/a2ff3dc073ec480983ff89fc7570f780.png)
 - 写下你不能马上达成目标的原因。首先你得从剖析自己的个性开始，是什么原因妨碍你的前进？要达成目标，你得采取什么做法呢？如果你不确定，可以想想有哪位成功者值得你去学习？
 - 你得从最终的成就倒算，记得大学学机械时，有门课程叫做逆向工程，当时不太懂现在有点顿悟呢。就是先有结果然后逆向推导。往你目前的地位一步步列出所需的做法。
 
@@ -113,8 +118,14 @@
 
 
 #### 4.3 创造一个好环境
-- 为自己创造一个适当的环境。零碎的时间可以学习零碎的知识，版块的时间可以学习比较系统的知识，如果自己比较受环境影响，那就去图书馆。我刚开始就是去首图图书馆，不管多烦，一去了就心静下来了。
+- 为自己创造一个适当的环境。零碎的时间可以学习零碎的知识，版块的时间可以学习比较系统的知识，如果自己比较受环境影响，那就去图书馆。
+- 我刚开始就是去首图图书馆，不管多烦，一去了就心静下来了。
 
+
+
+#### 4.4 做完要去回顾
+- 当自己做完这一切，回顾过去，有那些你所列的资源会运用得很纯熟。回顾过去找出你认为最成功的两三次经验，好好想想。
+- 仔细想想是做了什么特别的事，才造成事业、健康、财务、人际关系方面的成功，请记下这个特别的原因。
 
 
 
@@ -129,7 +140,7 @@
 
 #### 5.3 懂得一点复盘
 - 有时候，事情没做好，进度没坚持下来。一定要懂得一点复盘的常识，复盘在于认识自己，来源于围棋事后的反思。这样可以更加精进。复盘可以形成自己模板。
-
+- ![image](https://img-blog.csdnimg.cn/8d443a78f21c4c579a44da960688dda1.png)
 
 
 
