--- a/Read/ReadBlogWiki/01.出发启程/04.要带上技能地图.md
+++ b/Read/ReadBlogWiki/01.出发启程/04.要带上技能地图.md
@@ -28,9 +28,6 @@
 
 
 
-
-
-
 ### 02.技能的不同维度
 #### 2.1 技能学习维度
 - 在技能地图中，需要先开启和点亮哪些部分呢？回顾过去的经历并结合现实的需要，可以从如下四个不同程度的维度来说明：了解；掌握；熟练；精通。
@@ -110,9 +107,8 @@
 
 
 ### 07.系统演化的路径
-- 如果把我们看作一个不断成长和演化的系统，那么，你会得到一个启示：
-- 很多时候，其实不是我们自己不断地「往前走」，而是我们的内在系统本身，沿着我们设计的关键节点和路径，自行演化和发展。
-- 也就是说，对我们来说，更重要的，不是去推动自己「我要做什么」，而是找到自己的关键节点，把它们整合成一条路径，再给予自己足够的内驱力。
+- 如果把我们看作一个不断成长和演化的系统，那么，你会得到一个启示：很多时候，其实不是我们自己不断地「往前走」，而是我们的内在系统本身，沿着我们设计的关键节点和路径，自行演化和发展。
+- 对我们来说，更重要的，不是去推动自己「我要做什么」，而是找到自己的关键节点，把它们整合成一条路径，再给予自己足够的内驱力。
 - 这就需要你具备一个愿景和目标，并且，能够基于对愿景和自身本质的理解，决定每一个关键节点的方向，让系统始终保持一个稳定的方向。
 
 
