--- a/Read/ReadMeWiki/00.方案实践/09.网络监控设计实践.md
+++ b/Read/ReadMeWiki/00.方案实践/09.网络监控设计实践.md
@@ -9,11 +9,20 @@
     - 2.1 获取网络请求头
     - 2.2 获取网络响应头
     - 2.3 获取网络响应体
-- 04.封装思路介绍
-    - 4.1 整体设计思想
-    - 4.2 思路流程串讲
-    - 4.6 请求耗时统计
-    - 4.7 关于弱网模拟
+- 03.网络监控思路
+    - 3.1 弱网模拟思路
+    - 3.2 抓包拦截思路
+    - 3.3 流量统计思路
+    - 3.4 域名ping思路
+    - 3.5 网络异常统计思路
+    - 3.6 耗时统计思路
+- 04.方案实践步骤
+    - 4.1 弱网模拟实践
+    - 4.2 抓包拦截实践
+    - 4.3 流量统计实践
+    - 4.4 域名ping实践
+    - 4.5 网络异常统计实践
+    - 4.6 耗时统计实践
 - 05.方案基础设计
     - 5.1 整体架构图
     - 5.2 UML设计图
@@ -38,8 +47,21 @@
 #### 2.3 获取网络响应体
 
 
-### 04.封装思路介绍
-#### 4.1 整体设计思想
+
+### 03.网络监控思路
+#### 3.1 弱网模拟思路
+- 如何开发模拟网络异常工具
+    - 整体设计思路是，给OkHttpClient添加拦截器，然后在拦截器中拿到request和respond数据做处理即可。
+- 如何模拟网络超时
+    - 网络超时分为两种：请求超时和响应超时。请求超时是指客户端发送request到服务端过程超时，响应超时是指客户端在接收服务端respond数据过程超时。
+    - 模拟请求超时需要在chain.request()代码前面sleep时间，模拟响应超时需要在chain.proceed(request)代码之后sleep时间即可。
+- 如何模拟重定向或服务端异常
+    - 通过拦截器拿到Chain对象，先发送request，请求成功后会拿到真是respond数据。那么这个时候可以针对这个respond处理，重新设置数据和code码信息
+- 如何模拟弱网环境
+    - 模拟弱网环境相对复杂一点，发送request和接收respond数据都会有io流读写操作。其核心思路就是对io读写速度做出限制，比如每秒读取1k数据，那么读取10k的接口数据需要10秒
+
+
+#### 3.2 抓包拦截思路
 - Stetho库，Facebook 开源的一个 Android 调试工具，可以测试网络，用语言来描述应该是这样子：
     - 1、安装了stetho插件的app启动之后，会启动一个本地server1（LocalSocketServer），这个本地server1等待着app(client)的连接。
     - 2、同时，这个本地server1会与另外一个本地server2（ChromeDevtoolsServer）连接着。
@@ -54,7 +76,24 @@
     - 那么能不能把这个拿到的请求信息(请求信息和相应信息)，放到集合中，然后在Android的页面中展示呢？这样方便开发和测试查看网络请求信息，以及请求流程中的消耗时间（比如dns解析时间，请求时间，响应时间，共耗时等等）
 
 
-#### 4.2 思路流程串讲
+
+#### 3.3 流量统计思路
+
+
+
+#### 3.6 耗时统计思路
+- 如何消耗记录时间
+    - 在OkHttp库中有一个EventListener类。该类是网络事件的侦听器。扩展这个类以监视应用程序的HTTP调用的数量、大小和持续时间。
+    - 所有启动/连接/获取事件最终将接收到匹配的结束/释放事件，要么成功(非空参数)，要么失败(非空可抛出)。
+    - 比如，可以在开始链接记录时间；dns开始，结束等方法解析记录时间，可以计算dns的解析时间。
+    - 比如，可以在开始请求记录时间，记录connectStart，connectEnd等方法时间，则可以计算出connect连接时间。
+
+
+### 04.封装思路介绍
+#### 4.1 弱网模拟实践
+
+
+#### 4.2 抓包拦截实践
 - 如何统计网络请求和相应信息，大概流程如下所示
     - 第一步，找到入口，给OkHttpClient添加拦截器，该自定义拦截器继承Interceptor然后重写intercept拦截方法。
     - 第二步，构建一个独特的eventID，一对网络事件（请求和回包）对应一个eventID(使用AtomicInteger保证异步下数据独一)。这个是在创建NetworkEventReporter对象重写nextRequestId方法获取。
@@ -68,12 +107,16 @@
     - 第四步，在执行监听最后的方法callEnd中，做出最后的计算，主要是记录每个阶段的差值，存到对应的bean中(注意一个完整的请求和回包流程id是唯一的)。
 
 
-#### 4.6 请求耗时统计
-- 如何消耗记录时间
-    - 在OkHttp库中有一个EventListener类。该类是网络事件的侦听器。扩展这个类以监视应用程序的HTTP调用的数量、大小和持续时间。
-    - 所有启动/连接/获取事件最终将接收到匹配的结束/释放事件，要么成功(非空参数)，要么失败(非空可抛出)。
-    - 比如，可以在开始链接记录时间；dns开始，结束等方法解析记录时间，可以计算dns的解析时间。
-    - 比如，可以在开始请求记录时间，记录connectStart，connectEnd等方法时间，则可以计算出connect连接时间。
+#### 4.6 耗时统计实践
+- 遇到的问题记录说明
+    - 客户端请求从发起到网关实际接收到，中间有很复杂的链路，发起请求，dns解析，开始链接，发送请求头，发送请求body，返回数据等很多个阶段。
+- 基于OkHttp的网络监控
+    - 是不是可以考虑把整个api发起到结束进行监控，从而可以方便线上去监控一个Api真实的发起到结束的状况呢？
+- 基于OKHttp提供的EventListener
+    - 可以对于一个请求发起到最后的各个节点进行监控，之后上报日志数据，针对网络请求每个阶段的耗时情况都可以用数据说明。
+- 网络请求耗时统计已经有了现成的库
+    - [网络请求耗时统计库](https://github.com/yangchong211/YCAndroidTool/tree/master/MonitorNetLib)；关于EventListener的原理解读可以看我另一篇博客：[OkHttp请求耗时统计和实践](https://juejin.cn/post/6875626117265358855)
+
 
 
 #### 4.7 关于弱网模拟
