--- a/Read/ReadMeWiki/00.方案实践/08.App网络优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/08.App网络优化实践.md
@@ -4,13 +4,11 @@
     - 1.2 遇到问题
     - 1.3 基础概念
     - 1.4 设计目标
-- 02.网络诊断
-    - 2.1 接口异常率统计
-    - 2.2 请求耗时统计
-    - 2.3 轮训请求攻击
-    - 2.4 弱网模拟分析
-    - 2.5 域名劫持分析
-    - 2.6 数据劫持分析
+- 02.网络基础知识
+    - 2.1 网络请求基础
+    - 2.2 OkHttp请求流程
+    - 2.3 Retrofit请求流程
+    - 2.4 网络耗时设计流程
 - 03.网络优化策略
     - 3.1 HTTPDNS优化
     - 3.2 连接复用
@@ -20,6 +18,9 @@
     - 3.6 Http2
 - 04.一些常见优化
     - 4.1 网络数据加密
+    - 4.2 防止域名劫持
+    - 4.3 避免轮训请求攻击
+    - 4.4 数据劫持优化
     - 4.6 图片网络优化
     - 4.9 网络数据优化
 - 05.如何衡量优化成果
@@ -29,11 +30,16 @@
 
 
 
+
 ### 01.整体概述介绍
 #### 1.1 项目背景
+- 
 
 
 #### 1.2 遇到问题
+- OkHttp如何进行各个请求环节的耗时统计呢？
+    - OkHttp 版本提供了EventListener接口，可以让调用者接收一系列网络请求过程中的事件，例如DNS解析、TSL/SSL连接、Response接收等。
+    - 通过继承此接口，调用者可以监视整个应用中网络请求次数、流量大小、耗时(比如dns解析时间，请求时间，响应时间等等)情况。
 
 
 #### 1.3 基础概念
@@ -42,59 +48,38 @@
 #### 1.4 设计目标
 
 
-### 02.网络诊断
-#### 2.1 接口异常率统计
 
 
-#### 2.2 请求耗时统计
-- 遇到的问题记录说明
-    - 客户端请求从发起到网关实际接收到，中间有很复杂的链路，发起请求，dns解析，开始链接，发送请求头，发送请求body，返回数据等很多个阶段。
-- 基于OkHttp的网络监控
-    - 是不是可以考虑把整个api发起到结束进行监控，从而可以方便线上去监控一个Api真实的发起到结束的状况呢？
-- 基于OKHttp提供的EventListener
-    - 可以对于一个请求发起到最后的各个节点进行监控，之后上报日志数据，针对网络请求每个阶段的耗时情况都可以用数据说明。
-- 网络请求耗时统计已经有了现成的库
-    - [网络请求耗时统计库](https://github.com/yangchong211/YCAndroidTool/tree/master/MonitorNetLib)；关于EventListener的原理解读可以看我另一篇博客：[OkHttp请求耗时统计和实践](https://juejin.cn/post/6875626117265358855)
+### 02.网络基础知识
 
 
-
-#### 2.3 轮训请求攻击
-
-
-
-#### 2.4 弱网模拟分析
-- 如何开发模拟网络异常工具
-    - 整体设计思路是，给OkHttpClient添加拦截器，然后在拦截器中拿到request和respond数据做处理即可。
-- 如何模拟网络超时
-    - 网络超时分为两种：请求超时和响应超时。请求超时是指客户端发送request到服务端过程超时，响应超时是指客户端在接收服务端respond数据过程超时。
-    - 模拟请求超时需要在chain.request()代码前面sleep时间，模拟响应超时需要在chain.proceed(request)代码之后sleep时间即可。
-- 如何模拟重定向或服务端异常
-    - 通过拦截器拿到Chain对象，先发送request，请求成功后会拿到真是respond数据。那么这个时候可以针对这个respond处理，重新设置数据和code码信息
-- 如何模拟弱网环境
-    - 模拟弱网环境相对复杂一点，发送request和接收respond数据都会有io流读写操作。其核心思路就是对io读写速度做出限制，比如每秒读取1k数据，那么读取10k的接口数据需要10秒
-
-
-
-#### 2.5 域名劫持分析
-- 什么叫做域名劫持
-    - 指在劫持的网络范围内拦截域名解析的请求，分析请求的域名，返回假的IP地址或者什么都不做使请求失去响应，其效果就是对特定的网络不能访问或访问的是假网址。
-- 先说下域名劫持的现象
-    - 广告劫持：用户正常页面指向到广告页面。这个背景估计很多人遇到过……
-    - 恶意劫持：域名指向IP被改变，将用户访问流量引到挂马，盗号等对用户有害页面的劫持。
-    - local DNS缓存：为了降低跨网流量及用户访问速度进行的一种劫持，导致域名解析结果不能按时更新。
-- 域名劫持原因分析
-    - 缓存是DNS被劫持的根本原因，在DNS解析过程的各个缓存中均有可能被劫持。主要包括本机的hosts篡改劫持，和运营商的Local DNS劫持等。
-- 解决办法该怎么做
-    - 方案1：HttpDNS使用HTTP协议向DNS服务器的80端口进行请求，代替传统DNS协议向DNS服务器的53端口进行请求。也就是使用Http协议去进行DNS解析请求，将服务器返回的解析结果，直接向该IP发起对应的API服务请求，代替使用域名，域名解析请求直接发送到HTTPDNS服务器，绕过运营商Local DNS，避免域名劫持问题。
-    - 方案2：如果知道该域名的真实IP地址，则可以直接用此IP代替域名后进行访问。比如访问谷歌网站，可以把访问改为https://216.239.XX.XX/ ，从而绕开域名劫持。
-
-
-#### 2.6 数据劫持分析
-- 先说下数据劫持的现象
-    - 数据劫持针对明文传输的内容发生。用户发起HTTP请求，服务器返回页面内容时，经过中间的运营商网络，页面内容被篡改或加塞内容，强行插入弹窗或者广告。
-- 如何预防数据被劫持
-    - 解决方案：对内容进行HTTPS加密，实现密文传输，彻底避免劫持问题。
-
+#### 2.4 网络耗时设计流程
+- callStart(Call call) 请求开始：
+    - RealCall#execute()或者RealCall#enqueue()，当一个Call（代表一个请求）被同步执行或被添加异步队列中时，即会调用这个回调方法。需要说明这个方法是在dispatcher.executed/enqueue前执行的。
+- callFailed/callEnd 请求异常和请求结束：
+    - 在RealCall类中，callFailed在两种情况下被调用，第一种是在请求执行的过程中发生异常时。第二种是在请求结束后，关闭输入流时产生异常时。
+    - 在StreamAllocation类中，callEnd也有两种调用场景。第一种也是在关闭流时。第二种是在释放连接时。
+- dnsStart DNS解析开始：
+    - 在RouteSelector类中，Dns#lookup(String hostname)，dnsStart/dnsEnd就是在lookup前后被调用的。DNS解析是请求DNS服务器，将域名解析成ip的过程。域名解析工作是由JDK中的InetAddress类完成的。
+- connectStart 连接开始：
+    - 在RealConnection类中，OkHttp是使用Socket接口建立Tcp连接的，所以这里的连接就是指Socket建立一个连接的过程。
+    - 当连接被重用时，connectStart/connectEnd不会被调用。当请求被重定向到新的域名后，connectStart/connectEnd会被调用多次。
+- connectEnd 连接结束：
+    - 在RealConnection类中，因为创建的连接有两种类型（服务端直连和隧道代理），所以callEnd有两处调用位置。为了在基于代理的连接上使用SSL，需要单独发送CONECT请求。在连接过程中，无论是Socket连接失败，还是TSL/SSL握手失败，都会回调connectEnd。
+- secureConnectStart/secureConnectEnd TLS连接开始和结束
+    - 在RealConnection类中，在Socket建立连接后，会执行一个establishProtocol方法，这个方法的作用就是TSL/SSL握手。
+    - 如果我们使用了HTTPS安全连接，在TCP连接成功后需要进行TLS安全协议通信，等TLS通讯结束后才能算是整个连接过程的结束，也就是说connectEnd在secureConnectEnd之后调用。
+    - connectStart --->  secureConnectStart ---> secureConnectEnd ---> ConnectEnd
+- connectionAcquired/connectionReleased 连接绑定和释放监听
+    - 因为OkHttp是基于连接复用的，当一次请求结束后并不会马上关闭当前连接，而是放到连接池中。当有相同域名的请求时，会从连接池中取出对应的连接使用，减少了连接的频繁创建和销毁。
+    - 当根据一个请求从连接池取连接时，并打开输入输出流就是acquired，用完释放流就是released。
+- requestHeadersStart/requestHeadersEnd
+    - 在CallServerInterceptor拦截器中，
+- requestBodyStart/requestBodyEnd
+- responseHeadersStart/responseHeadersEnd
+- responseBodyStart/responseBodyEnd
+- callEnd(Call call) 请求结束：
+- callFailed 请求异常：
 
 
 ### 03.网络优化策略
@@ -135,6 +120,30 @@
 
 
 
+#### 4.2 防止域名劫持
+- 什么叫做域名劫持
+    - 指在劫持的网络范围内拦截域名解析的请求，分析请求的域名，返回假的IP地址或者什么都不做使请求失去响应，其效果就是对特定的网络不能访问或访问的是假网址。
+- 先说下域名劫持的现象
+    - 广告劫持：用户正常页面指向到广告页面。这个背景估计很多人遇到过……
+    - 恶意劫持：域名指向IP被改变，将用户访问流量引到挂马，盗号等对用户有害页面的劫持。
+    - local DNS缓存：为了降低跨网流量及用户访问速度进行的一种劫持，导致域名解析结果不能按时更新。
+- 域名劫持原因分析
+    - 缓存是DNS被劫持的根本原因，在DNS解析过程的各个缓存中均有可能被劫持。主要包括本机的hosts篡改劫持，和运营商的Local DNS劫持等。
+- 解决办法该怎么做
+    - 方案1：HttpDNS使用HTTP协议向DNS服务器的80端口进行请求，代替传统DNS协议向DNS服务器的53端口进行请求。也就是使用Http协议去进行DNS解析请求，将服务器返回的解析结果，直接向该IP发起对应的API服务请求，代替使用域名，域名解析请求直接发送到HTTPDNS服务器，绕过运营商Local DNS，避免域名劫持问题。
+    - 方案2：如果知道该域名的真实IP地址，则可以直接用此IP代替域名后进行访问。比如访问谷歌网站，可以把访问改为https://216.239.XX.XX/ ，从而绕开域名劫持。
+
+
+#### 4.4 数据劫持优化
+- 先说下数据劫持的现象
+    - 数据劫持针对明文传输的内容发生。用户发起HTTP请求，服务器返回页面内容时，经过中间的运营商网络，页面内容被篡改或加塞内容，强行插入弹窗或者广告。
+- 劫持数据的大概原理
+    - 待完善
+- 如何预防数据被劫持
+    - 解决方案：对内容进行HTTPS加密，实现密文传输，彻底避免劫持问题。
+
+
+
 #### 4.6 图片网络优化
 - 比如我之前看到豆瓣接口，提供一种加载图片方式特别好。接口返回图片的数据有三种，一种是高清大图，一种是正常图片，一种是缩略小图。当用户处于wifi下给控件设置高清大图，当4g或者3g模式下加载正常图片，当弱网条件下加载缩略图【也称与加载图】。
 - 简单来说根据用户的当前的网络质量来判断下载什么质量的图片（电商用的比较多）。豆瓣开源接口可以参考一下！
@@ -151,6 +160,11 @@
     - 返回数据的body也可以做gzip压缩，body数据体积可以缩小到原来的30%左右。（也可以考虑压缩返回的json数据的key数据的体积，尤其是针对返回数据格式变化不大的情况，支付宝聊天返回的数据用到了）
 
 
+
+
+### 参考文章
+- 探索 Android 网络优化方法
+    - https://www.jianshu.com/p/41bbf2f9c2a9
 
 
 
