--- a/Read/ReadMeWiki/05.智能硬件/01.蓝牙开发业务实践.md
+++ b/Read/ReadMeWiki/05.智能硬件/01.蓝牙开发业务实践.md
@@ -45,6 +45,7 @@
 #### 1.1 项目背景说明
 
 
+
 #### 1.2 遇到问题记录
 
 
@@ -118,7 +119,7 @@
     - 设置可被发现，蓝牙打开后，要将自身设置为可以被周边蓝牙搜索到，以便可以进行下一步操作。蓝牙默认可被周边设备在120秒内搜索到，最长设置不过300秒。
     - 收集周边蓝牙设备，通过注册广播监听，对发现的蓝牙设备添加到集合中。
 - 第三步：连接设备
-    - 获取设备详情，获取蓝牙列表之后，点击对应的蓝牙，进入蓝牙详情。一个BluetoothDeviced对象代表着一个周边蓝牙设备，通过该对象，可以获取该蓝牙设备的名称，绑定状态，Mac地址，uuid等。
+    - 获取设备详情，获取蓝牙列表之后，点击对应的蓝牙，进入蓝牙详情。一个BluetoothDevice对象代表着一个周边蓝牙设备，通过该对象，可以获取该蓝牙设备的名称，绑定状态，Mac地址，uuid等。
     - 未配对蓝牙设备通过mDevice.createBond();进行配对。
 - 第四步：管理连接后数据传递
     - 配对成功后，通过BluetoothDevice的createRfcommSocketToServiceRecord()方法和蓝牙设备连接，连接成功会返回BluetoothSocket对象，进而获得输入输出流，进行数据交互。
@@ -170,9 +171,17 @@
 
 
 #### 3.5 匹配蓝牙配对
+- 如何判断设备配对
+- 如何查询已经配对的设备
+    - 直接调用bluetoothAdapter.getBondedDevices()方法即可获取已经配对的设备。
+- 如何解除已经配对的设备
 
 
 #### 3.6 配对后连接蓝牙
+- 如何判断蓝牙是否连接
+    - 第一种方法：通过BluetoothAdapter.getProfileConnectionState(), 这个方法需要传入一个设备类型，不同设备类型可能不同。
+    - 第二种方法：BluetoothAdapter类中有一个函数getConnectionState()，但是这个函数不提供给App使用，只能通过反射的方式调用。
+
 
 
 #### 3.7 蓝牙数据传递
