--- a/Read/ReadMeWiki/05.智能硬件/01.蓝牙开发业务实践.md
+++ b/Read/ReadMeWiki/05.智能硬件/01.蓝牙开发业务实践.md
@@ -171,10 +171,17 @@
 
 
 #### 3.5 匹配蓝牙配对
-- 如何判断设备配对
+- 如何判断设备是否配对
+    - 先获取所有已经配对的设备，然后遍历查询。就可以知道目标设备是否有配对。
+- 如何设置蓝牙配对
+    - 第一种：在低于Android API 19时，配对的方法是隐藏的方法，所以只有通过反射方法实现。反射BluetoothDevice类中的createBond方法。
+    - 第二种：官方API，但是只支持Android API 19以上的设备。直接调用bluetoothDevice.createBond()去配对。
 - 如何查询已经配对的设备
     - 直接调用bluetoothAdapter.getBondedDevices()方法即可获取已经配对的设备。
 - 如何解除已经配对的设备
+    - 第一种：配对的方法是隐藏的方法，所以只有通过反射方法实现。反射BluetoothDevice类中的removeBond方法。
+
+
 
 
 #### 3.6 配对后连接蓝牙
