--- a/Read/ReadMeWiki/05.智能硬件/01.蓝牙开发业务实践.md
+++ b/Read/ReadMeWiki/05.智能硬件/01.蓝牙开发业务实践.md
@@ -188,6 +188,10 @@
 - 如何判断蓝牙是否连接
     - 第一种方法：通过BluetoothAdapter.getProfileConnectionState(), 这个方法需要传入一个设备类型，不同设备类型可能不同。
     - 第二种方法：BluetoothAdapter类中有一个函数getConnectionState()，但是这个函数不提供给App使用，只能通过反射的方式调用。
+- 如何设置连接蓝牙
+    - 
+- 如何取消蓝牙连接
+
 
 
 
