--- a/Read/ReadMeWiki/06.Framework/03.App核心概念分析.md
+++ b/Read/ReadMeWiki/06.Framework/03.App核心概念分析.md
@@ -16,8 +16,18 @@
     - 5.1 什么是DecorView
     - 5.2 DecorView如何创建
 - 06.Android组件设计
+    - 6.1 ActivityManagerService
+    - 6.2 Binder
 
 
+
+
+### 00.问题答疑思考
+- App进程：说一下App进程启动流程？Zygote进程的启动流程是什么样的？关于Zygote进程主要做了那些事情？
+- App进程：SystemServer进程启动流程是什么样的？怎么创建单个进程(application)？如何启动ActivityThread？
+- 启动入口：ActivityThread启动入口做了什么？如何创建上下文？为什么要创建上下文。说一下主线程创建时机？
+- 启动流程：说一下application的启动流程，何时创建，什么时候调用onCreate和attachBaseContext方法？
+- 启动顺序：Application中attachBaseContext方法，onCreate方法和ContentProvider中的onCreate方法执行的顺序是什么？
 
 
 ### 01.App进程启动流程
@@ -45,7 +55,7 @@
     > ZygoteInit#forkSystemServer()，fork出SystemServer进程
 - SystemServer进程启动流程
     > SystemServer#main()，只是new出一个SystemServer对象并执行其run方法
-    > SystemServer#run()，初始化时间，语音，locale。接着设置虚拟机运行内存，加载运行库。然后初始化AMS，PMS，WMS等。
+    > SystemServer#run()，初始化时间，语言，locale。接着设置虚拟机运行内存，加载运行库。然后初始化AMS，PMS，WMS等。
     > SystemServer#createSystemContext()，看到在SystemServer进程中也存在着Context对象，并且是通过ActivityThread.systemMain方法创建context的
     > SystemServer#startBootstrapServices()，这个是启动核心服务的方法
         > SystemServiceManager#startService启动各种服务，看源码可知，这个是通过反射器构造方法创建出服务类，最后再添加到SystemServiceManager的服务列表数据
@@ -106,8 +116,6 @@
 
 ### 04.Window创建流程
 #### 4.1 启动流程图
-- window启动流程
-    - ![image](https://upload-images.jianshu.io/upload_images/4432347-99d9bf7265c1566b.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 - Window是什么？
     - 表示一个窗口的概念，是所有View的直接管理者，任何视图都通过Window呈现(点击事件由Window->DecorView->View; Activity的setContentView底层通过Window完成)
     - Window是一个抽象类，具体实现是PhoneWindow。PhoneWindow中有个内部类DecorView，通过创建DecorView来加载Activity中设置的布局`R.layout.activity_main`。
@@ -148,6 +156,8 @@
 
 
 #### 4.2 流程图说明
+- window启动流程
+    - ![image](https://upload-images.jianshu.io/upload_images/4432347-99d9bf7265c1566b.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 
 
