--- a/Read/ReadMeWiki/09.问题面试/03.Android问题汇总.md
+++ b/Read/ReadMeWiki/09.问题面试/03.Android问题汇总.md
@@ -21,9 +21,11 @@
 
 ### 01.四大组件问题汇总
 #### 1.0 App启动
-- 说一下App进程启动的流程？在进程启动时启动了那些服务，做了什么事情？在启动服务是怎么创建Context上下文？
-- ActivityThread为何说是程序入口，Looper是如何启动的。系统是如何创建application应用，说一下大概流程？
-- Application中attachBaseContext方法，onCreate方法和ContentProvider中的onCreate方法执行的顺序是什么？
+- App进程：说一下App进程启动流程？Zygote进程的启动流程是什么样的？关于Zygote进程主要做了那些事情？
+- App进程：SystemServer进程启动流程是什么样的？怎么创建单个进程(application)？如何启动ActivityThread？
+- 启动入口：ActivityThread启动入口做了什么？如何创建上下文？为什么要创建上下文。说一下主线程创建时机？
+- 启动流程：说一下application的启动流程，何时创建，什么时候调用onCreate和attachBaseContext方法？
+- 启动顺序：Application中attachBaseContext方法，onCreate方法和ContentProvider中的onCreate方法执行的顺序是什么？
 
 
 
