--- a/Read/ReadMeWiki/06.Framework/04.Android消息机制.md
+++ b/Read/ReadMeWiki/06.Framework/04.Android消息机制.md
@@ -4,13 +4,11 @@
     - 1.1 消息机制的背景
     - 1.2 Handler消息类型
     - 1.3 Handler四要素
-- 02.Handler使用介绍
-    - 2.1 Handler基础使用
-    - 2.2 解决handler内存泄露
 - 03.子线程的消息处理
     - 3.1 子线程中定义Handler
     - 3.2 不建议在子线程访问UI
     - 3.3 子线程更新UI方式
+    - 3.9 解决handler内存泄露
 - 04.消息机制源码分析
     - 4.1 Handler源码分析
     - 4.2 Message源码分析
@@ -27,6 +25,19 @@
 
 
 
+### 00.问题答疑思考
+- 请说一下Android消息机制？子线程中是否可以new一个handler对象？会出现什么问题，为什么？如何提高Message的优先级？
+- 阻塞唤醒原理。这里一般是会问为何loop()方法是死循环却不会占用cpu时间片 or 为何next()方法阻塞却不会卡死。更深一点会问到Linux的IO多路复用epoll原理。
+- Looper从消息队列中取出消息后，如何传递给handler？消息队列MessageQuee底层怎么实现的？handler里面的nativePollOnce 为什么不会anr？
+- Handler、Thread和HandlerThread的差别 ？HandlerThread是怎么实现的？
+- Looper.loop()为什么不会阻塞主线程，IdleHandler（闲时机制）是做什么用的？
+- Handler机制，IdleHandler执行时机。Handler#postDelay(runnable, 20s) 一个消息，然后把手机时间调整为1分钟后，刚才的runnable会不会执行。
+- ThreadLocal是如何做到线程间的不共享数据的，ThreadLocalMap里面的key和value是什么。实现及如何保证Local属性？
+- 说下handler的流程，异步消息是什么？Android中哪些场景会发送异步消息？我们在代码中可以手动发异步消息吗？
+- 什么是消息同步屏障？Android中是如何实现消息同步屏障的？同步屏障的目的主要是为了什么？
+- Choreographer是什么？Choreographer发出异步消息后如何执行任务？
+
+
 ### 01.Handler必备知识点
 #### 1.1 消息机制的背景
 - Android应用程序与传统的PC应用程序一样，都是消息驱动的。
@@ -38,8 +49,7 @@
 
 
 #### 1.2 Handler消息类型
-- Handler的Message种类分为三种：
-    - 1.普通消息；2.异步消息；3.屏障消息
+- Handler的Message种类分为三种：1.普通消息；2.异步消息；3.屏障消息
 - 普通消息
     - 普通消息又称为同步消息，我们平时发的消息基本都是同步消息。
 - 异步消息
@@ -66,23 +76,6 @@
 
 
 
-
-### 02.Handler使用介绍
-#### 2.1 Handler基础使用
-- Handler发送普通消息
-- Handler发送延迟消息
-- Handler发送异步消息
-- Handler发送屏障消息
-
-
-
-#### 2.2 解决handler内存泄露
-- 为何会内存泄漏
-    - 通过内部类的方式创建mHandler对象，此时mHandler会隐式地持有一个外部类对象引用这里就是Activity，当执行post/send方法时，该方法会将你的Handler装入一个Message，并把这条Message推到MessageQueue中，MessageQueue是在一个Looper线程中不断轮询处理消息。
-    - 那么当这个Activity退出时消息队列中还有未处理的消息或者正在处理消息，而消息队列中的Message持有mHandler实例的引用，mHandler又持有Activity的引用，所以导致该Activity的内存资源无法及时回收，引发内存泄漏。
-- 解决Handler内存泄露主要2点
-    - 有延时消息，要在Activity销毁的时候移除Messages。需在onDestroy()函数中调用mHandler.removeCallbacksAndMessages(null)
-    - 匿名内部类导致的泄露改为匿名静态内部类，并且对上下文或者Activity使用弱引用。注意：每次使用前注意判空。
 
 
 
@@ -120,6 +113,17 @@
     - 第四种：View.post(Runnable r) 
 - 相似处分析
     - 跟进去看源码，发现其实它们的实现原理都还是一样，最终都是通过Handler发送消息来实现的。
+
+
+#### 3.9 解决handler内存泄露
+- 为何会内存泄漏
+    - 通过内部类的方式创建mHandler对象，此时mHandler会隐式地持有一个外部类对象引用这里就是Activity，当执行post/send方法时，该方法会将你的Handler装入一个Message，并把这条Message推到MessageQueue中，MessageQueue是在一个Looper线程中不断轮询处理消息。
+    - 那么当这个Activity退出时消息队列中还有未处理的消息或者正在处理消息，而消息队列中的Message持有mHandler实例的引用，mHandler又持有Activity的引用，所以导致该Activity的内存资源无法及时回收，引发内存泄漏。
+- 解决Handler内存泄露主要2点
+    - 有延时消息，要在Activity销毁的时候移除Messages。需在onDestroy()函数中调用mHandler.removeCallbacksAndMessages(null)
+    - 匿名内部类导致的泄露改为匿名静态内部类，并且对上下文或者Activity使用弱引用。注意：每次使用前注意判空。
+
+
 
 
 ### 04.消息机制源码分析
