--- a/Read/ReadBlogWiki/01.出发启程/05.经营好自我公司.md
+++ b/Read/ReadBlogWiki/01.出发启程/05.经营好自我公司.md
@@ -14,17 +14,20 @@
 - 一位实习生开始接手客服工作，她几乎回复了用户发来的每一个问题，不明白的就和产品研发沟通，尽可能给用户满意的答复，在没有要求的节假日也会处理客服问题。
 - 在这个期间她对公司的产品有了详尽的了解，不仅如此，她还和运营的同学一起组织了客服标准话术，分门别类整理反馈问题给研发和产品做参考，和运营团队一起构建客服规范等等，对业务的发展起到了非常重要的作用。
 - 什么是牛人，就是交给他/她一件事，做成了，还做得挺好，而且还触类旁通。这个客服相比一般的人，多了一份对待工作的热情，还主动性地掌握更多，这就是经营好自我公司的一种体现。
+- ![image](https://img-blog.csdnimg.cn/4d4e7e08481c425bb359cdf734d0db7a.png)
+
 
 
 ### 01.对待工作的态度
-- 不知道你有没有注意到，关于如何对待工作，大约有两种对立的思想。一种是所谓的“奋斗党”，对工作充满热情，会主动想办法甚至加班加点去完成工作、解决问题，认为人生因为拼搏奋斗而变得更加有意义；一种是所谓的“咸鱼党”，秉持着给多少钱干多少事儿的态度，多出一分力都觉得自己亏了，觉得咸鱼的人生才是真正为自己活着。
+- 不知道你有没有注意到，关于如何对待工作，大约有两种对立的思想。一种是所谓的“奋斗党”，对工作充满热情，会主动想办法甚至加班加点去完成工作、解决问题，认为人生因为拼搏奋斗而变得更加有意义；
+- 另外一种是所谓的“咸鱼党”，秉持着给多少钱干多少事儿的态度，多出一分力都觉得自己亏了，觉得咸鱼的人生才是真正为自己活着。
 - 这两种想法，其实都是自己的人生选择，但它们背后的核心思想是“我在为谁而工作”。主动性的学习和工作是为了提升自己，获得更强大的竞争力，而不只是为了一份工作或者一个老板。
-
 
 
 ### 02.我在为谁而工作
 - 换一个视角，把自己当成一家公司一样来经营，经营自己的工作和人生，可能就会有完全不同的体会。在这个视角下，老板就是你的客户，你的工作就是你为客户提供的产品或服务，而跳槽就是换客户。
 - 想要把自己的人生公司经营成什么样呢？怎么做才能经营好自己的人生公司呢？可能需要学会明确自己的核心价值，为自己设定方向和目标，确定自己的工作流程、规范和原则，建立自己的人脉关系，掌控自己的资金流等等，全权为自己负责。
+
 
 
 ### 03.要有自己的价值
@@ -55,22 +58,29 @@
 #### 6.1 好好沉淀自己
 - 谁都想去一个好的公司，能给未来的自己积累到最好的筹码。其实人生就是选择，机会往往稍纵即逝，关键在于自己不要后悔（当然后悔也是没用的）。
 - **很多人，在不断的选择、跳槽中，彻底迷失了自己。其实去任何公司，哪怕这个公司再烂，只要你足够用心，都能学到很多有用的东西，无心者去哪都一样**。我们都在找一个终点，但永远不知道他究竟在哪儿。与其这样，不如好好的完善自己。
-- 牛逼的公司的确能给你一个光环，但不代表你就牛逼。**一定要在一家公司好好沉淀个三四年，切莫荒废了自己**。用人单位最看重的是什么？他们更看重你在以前公司积累的内在的东西，不是你平时做什么，而是你做出了什么成绩、你有什么资源、你在这个公司的成长轨迹、因为有你给这个公司带来了什么。
+- 牛逼的公司的确能给你一个光环，但不代表你就牛逼。**一定要在一家公司好好沉淀个三四年，切莫荒废了自己**。用人单位最看重的是什么？
+- 他们更看重你在以前公司积累的内在的东西，不是你平时做什么，而是你做出了什么成绩、你有什么资源、你在这个公司的成长轨迹、因为有你给这个公司带来了什么。
 
 
 
 #### 6.2 离开后剩下什么
-- **离开了这个公司，你还剩下什么**？很多人很可悲。现在这个社会太浮躁，太多人抱怨自己的公司如何如何，抱怨自己的领导如何如何。抱怨是徒劳的，他们经常不会因为你的抱怨而改变，至少本质不会变。关于这个问题，给6个字：要么忍，要么滚。
-- 这个世界上没有完美的人，公司也如是。你要明白自己在这个公司，真正需要的是什么？如果值得挖，请深挖。如果爱，请深爱。领导也一样，他们能成为你的领导，就一定有比你强的地方，他好的地方，你跟着好好学就是了。觉得不OK，那就另谋出路。
+- **离开了这个公司，你还剩下什么**？很多人很可悲。现在这个社会太浮躁，太多人抱怨自己的公司如何如何，抱怨自己的领导如何如何。
+- 抱怨是徒劳的，他们经常不会因为你的抱怨而改变，至少本质不会变。关于这个问题，给6个字：要么忍，要么滚。
+- 这个世界上没有完美的人，公司也如是。你要明白自己在这个公司，真正需要的是什么？如果值得挖，请深挖。如果爱，请深爱。
+- 领导也一样，他们能成为你的领导，就一定有比你强的地方，他好的地方，你跟着好好学就是了。觉得不OK，那就另谋出路。
+
 
 
 ### 07.为自己未来打工
 - 什么是为自己打工？在成长发展的进程中，什么时候你的工作热情、努力程度不为工资待遇不高、不为上级评价不公而减少，从那时起你就开始为自己打工了。
 - 必须树立一个最基本也是最重要的理念：**个人成长第一，工资待遇第二。一定要珍惜企业为你搭建的平台，把工作真正当成愉快的带薪学习的过程，抓住一切可能的机会，创造一切可能的条件，在职业实践中提高自己**。
-- 试想一下，一般情况下，人生在世，除了父母和少量的慈善家花钱供自己学习之外，还有第二个人花钱供你学习吗？如果有，那这第二个人就是你的企业和老板，老板给你开着工资，免费让你在他的“企业实验场”里学习锻炼自己，而所有的风险则是他独自承担。难道我们不应该珍惜这样难得的机会吗？
+- 试想一下，一般情况下，人生在世，除了父母和少量的慈善家花钱供自己学习之外，还有其他人花钱供你学习吗？
+- 如果有，那这第二个人就是你的企业和老板，老板给你开着工资，同时也极大"剥削"你，好好学习和锻炼自己。
 
 
-
+### 08.其他的内容介绍
+- 思维导图开源：https://www.processon.com/u/58816fa4e4b049e795b6fc81/profile
+- 技术开源博客(所有文档开源)：https://github.com/yangchong211
 
 
 
