--- a/Read/ReadBlogWiki/03.建立体系/02.体系思维很重要.md
+++ b/Read/ReadBlogWiki/03.建立体系/02.体系思维很重要.md
@@ -5,6 +5,7 @@
 - 04.面性思维成框架
 - 05.立体思维附加值
 - 06.点线面体的思维
+- 07.体系思维流程化
 
 
 
@@ -39,6 +40,13 @@
 
 
 
+### 07.体系思维流程化
+- 每次做成一件事情，学习一种技能，我都会想，能不能把这件事情设计成一个流程？那个针对不同的学习思考方法，能否输出成流程？
+- 大到公司里新的项目，运营方针，小到个人生活里的各种细节，都会想办法从中找出「能够复制和迁移」的关键，用流程的形式把它固化下来。
+- 可以是一系列步骤，可以是一个模型，可以是一套SOP，也可以是一张核对表……不一定要书面化储存，对于一些比较简单的流程，我也会先梳理一下，然后记在脑子里，需要的时候按部就班去用就好。
+- 一旦变成流程，也就意味着：当我再次面对类似的问题时，无需重复操心，可以直接调用我已有的流程来解决它。
+- 比起我花费脑力去分门别类地处理每一件事情，把一切都丢给流程，未必是最好的，但一定是最省力、最小化「不必要的麻烦」的。
+- 流程的本质是什么？是你自身「内在系统」的一部分，亦即你理解外部世界、处理新情境的一种加工模式。一个人成长的过程，很重要的一点，就是不断把新问题、新情境，内化进自己的系统里，成为自己系统的一部分。
 
 
 
