--- a/Read/ReadMeWiki/01.大型方案/10.通用弹窗设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/10.通用弹窗设计实践.md
@@ -11,8 +11,15 @@
     - 2.4 PopupWindow
     - 2.5 SnackBar
 - 03.弹窗的设计思想
-    - 
+    - 2.1 弹窗UI设计
+    - 2.2 弹窗动画设计
+    - 2.3 弹窗展示设计
 - 04.弹窗的源码分析
+    - 4.1 Dialog源码
+    - 4.2 Toast源码流程
+    - 4.3 DialogFragment源码
+    - 4.4 PopupWindow源码
+    - 4.5 SnackBar源码
 - 05.方案基础设计
     - 5.1 整体架构图
     - 5.2 UML设计图
@@ -50,6 +57,8 @@
 
 
 #### 2.2 Toast吐司
+- Toast常用于信息提示
+    - Toast只会弹出一段信息，告诉用户某某事情已经发生了，过一段时间后就会自动消失。它不会阻挡用户的任何操作。
 
 
 #### 2.3 DialogFragment
@@ -62,7 +71,28 @@
 
 
 ### 04.弹窗的源码分析
+#### 4.1 Dialog源码
 
+
+
+#### 4.2 Toast源码流程
+- 先来思考几个问题
+    - 吐司：吐司弹出后过一段时间自动消失是如何实现的？连续多次Show后吐司连续吐出是如何实现的？如何设计自动销毁？
+    - 吐司：吐司如何实现跨进程通信？为什么要使用Aidl技术？为何activity销毁后toast仍会显示？
+    - 吐司：如何将View加载到吐司视图中？其核心原理是什么？为什么不支持输入事件？
+    - 吐司：吐司中token作用是什么？Binder具体起到什么作用？开发者为何要引入Binder？
+- 
+
+
+
+#### 4.3 DialogFragment源码
+
+
+#### 4.4 PopupWindow源码
+
+
+
+#### 4.5 SnackBar源码
 
 
 
