--- a/Read/ReadMeWiki/08.思考系列/11.Jetpack设计思想反思.md
+++ b/Read/ReadMeWiki/08.思考系列/11.Jetpack设计思想反思.md
@@ -26,17 +26,16 @@
 ### 02.Navigation设计思想
 #### 2.1 Navigation基础介绍
 - `Navigation`是一个可简化`Android`导航的库和插件
-    - 更确切的来说，`Navigation`是用来管理`Fragment`的切换，并且可以通过可视化的方式，看见App的交互流程。
-- 最关键的三要素
-    - Navigation Graph(New XML resource)	
-        - 这是一个新的资源文件，用户在可视化界面可以看出他能够到达的Destination(用户能够到达的屏幕界面)，以及流程关系。
-        - `NavHostFragment`作为`Activity`导航的容器，然后，其 **app:navGraph** 属性指向一个navigation_graph的xml文件，以声明其 **导航的结构**。
-        - `action`标签是什么：声明导航的行为，比如id，通过id可以执行跳转到对应的页面；如果destination，声明行为导航的目的地
-        - `argument`标签是什么：跳转参数的设置，name表示参数key，argType表示参数类型，defaultValue表示默认值
-    - NavHostFragment(Layout XML view)	
-        - 当前Fragment的容器，那么导航的fragment其实都是展示在这个容器上的。
-    - NavController(Kotlin/Java object)	
-        - 导航的控制者，主要是负责fragment的栈的管理。负责页面跳转
+    - 更确切的来说，`Navigation`是用来管理`Fragment`的切换，并且可以通过可视化的方式，看见App的交互流程。最关键的三要素
+- Navigation Graph(New XML resource)	
+    - 这是一个新的资源文件，用户在可视化界面可以看出他能够到达的Destination(用户能够到达的屏幕界面)，以及流程关系。
+    - `NavHostFragment`作为`Activity`导航的容器，然后，其 **app:navGraph** 属性指向一个navigation_graph的xml文件，以声明其 **导航的结构**。
+    - `action`标签是什么：声明导航的行为，比如id，通过id可以执行跳转到对应的页面；如果destination，声明行为导航的目的地
+    - `argument`标签是什么：跳转参数的设置，name表示参数key，argType表示参数类型，defaultValue表示默认值
+- NavHostFragment(Layout XML view)	
+    - 当前Fragment的容器，那么导航的fragment其实都是展示在这个容器上的。
+- NavController(Kotlin/Java object)	
+    - 导航的控制者，主要是负责fragment的栈的管理。负责页面跳转
 
 
 
@@ -60,23 +59,27 @@
 
 
 #### 2.3 Navigation原理流程
-- `NavHostFragment`导航容器核心原理分析
-    - 1.NavHostFragment#onCreateView()，这个里面创建了一个FragmentContainerView布局并且设置id
-        - NavHostFragment内部实例化了一个FrameLayout, **作为ViewGroup的载体，导航并展示其它Fragment**。
-    - 2.NavHostFragment#onCreate()，创建导航控制者对象，并且通用bundle获取核心参数
-        - 创建`NavHostController`导航空指针，并且和lifecycle绑定；
-        - 通过bundle获取一些核心参数，比如：graphId(Graph文件id属性)，defaultHost(容器是否与系统的返回按钮相关联)，startDestinationArgs等等
-        - 将获取的`graphId`设置到`NavHostController`控制器中，这个相当于设置跳转的核心地图。
-    - 3.NavHostFragment#onViewCreated()，给view设置tag标签并且绑定`NavHostController`控制器
-        - 如果`view`的父布局不为空，则拿到父布局的id和当前`fragment`的id是否相同，如果相同则设置给父布局标签和控制器。
-        - 注意Navigation.setViewNavController(view, mNavController)，这个是将view(这个View是NavHostFragment的根布局)和NavController绑定起来，通用tag标签。
-- `nav_graph`导航结构图如何解析
-    - 1.NavHostFragment#onInflate()，主要是解析自定义属性。
-        - 这个里面获取了给`NavHostFragment`容器设置的`defaultNavHost`属性，还有获取`navGraph`属性(对应是graph文件的id)
-    - 2.如何导航到graph文件中的第一个页面，即跳转到`startDestination`节点
-        - 
-    - 3.
-- `NavController`实现路由跳转流程
+##### 2.3.1 `NavHostFragment`导航容器核心原理分析
+- 1.NavHostFragment#onCreateView()，这个里面创建了一个FragmentContainerView布局并且设置id
+    - NavHostFragment内部实例化了一个FrameLayout, **作为ViewGroup的载体，导航并展示其它Fragment**。
+- 2.NavHostFragment#onCreate()，创建导航控制者对象，并且通用bundle获取核心参数
+    - 创建`NavHostController`导航空指针，并且和lifecycle绑定；
+    - 通过bundle获取一些核心参数，比如：graphId(Graph文件id属性)，defaultHost(容器是否与系统的返回按钮相关联)，startDestinationArgs等等
+    - 将获取的`graphId`设置到`NavHostController`控制器中，这个相当于设置跳转的核心地图。
+- 3.NavHostFragment#onViewCreated()，给view设置tag标签并且绑定`NavHostController`控制器
+    - 如果`view`的父布局不为空，则拿到父布局的id和当前`fragment`的id是否相同，如果相同则设置给父布局标签和控制器。
+    - 注意Navigation.setViewNavController(view, mNavController)，这个是将view(这个View是NavHostFragment的根布局)和NavController绑定起来，通用tag标签。
+
+##### 2.3.2 `nav_graph`导航结构图如何解析
+- 1.NavHostFragment#onInflate()，主要是解析自定义属性。
+    - 这个里面获取了给`NavHostFragment`容器设置的`defaultNavHost`属性，还有获取`navGraph`属性(对应是graph文件的id)
+- 2.如何导航到graph文件中的第一个页面，即跳转到`startDestination`节点
+    - 1
+- 3.完善
+
+
+##### 2.3.3 `NavController`实现路由跳转流程
+- Nav跳转方法操作如下
     ``` java
     //xxx，可以是指向目标页面id，也可以是directions，还可以是deepLink
     Navigation.findNavController(view).navigate(xxx)
@@ -86,7 +89,7 @@
 
 #### 2.4 遇到问题的说明
 - 第一个问题：Navigation为何重建fragment？
-- 第二个问题：
+- 第二个问题：Navigation如何拆分graph文件，解决文件臃肿问题？
 
 
 
@@ -120,11 +123,44 @@
 
 ### 05.LiveData设计思想
 #### 5.1 LiveData基础介绍
+- 先来看一个最简单案例
+    ``` java
+    liveData = new MutableLiveData<String>();
+    liveData.observe(this, new Observer<String>() {
+        @Override
+        public void onChanged(@Nullable final String newText) {
+            // 更新数据
+            tv.setText(newText);
+        }
+    });
+    liveData.setValue("小杨真的是一个逗比么");
+    ```
+- 那么上面这一段代码大概是什么意思呢？
+    - 1.首先创建一个 MutableLiveData（LiveData是抽象类）对象 ，通过 observe 方法可以订阅修改数据的通知
+    - 2.通过 postValue()或者 setValue() 方法发送事件更新数据
+    - 3.已经订阅的 Observer 能够得到数据更改的通知，就会回调 onChanged() 方法。
+
+
 
 #### 5.2 LiveData如何设计
+- 如何设计这种观察者模式？
+    - 设计者首先要定义一个接口Observer，接口中通知数据刷新onChanged方法。然后将注册监听的事件添加到Map集合中。最后发送数据后，取集合数据遍历通知刷新。
+- 如何设计发送数据？
+    - 考虑到子线程不能更新Ui，固设计postValue方法。发送数据后，然后进行事件分发，遍历mObservers集合中监听者，然后调用观察者接口中onChanged方法刷新。
+- 如何设计避免内存泄漏？
+    - 当它被我们的Activity订阅观察，这之后Activity如果finish()掉，LiveData本身会自动“清理”以避免内存泄漏。主要是依靠Lifecycle。
+- 如何设计LiveData资源共享？
+    - 1
+- 如何设计生命周期活跃状态才通知数据变化刷新？
+    - 第一点：在发送数据后遍历监听者刷新时，会判断observer是否是活跃的状态(是否是非CREATE状态)。如果是非活跃状态则过滤！
+
 
 
 #### 5.3 LiveData原理流程
+- setValue/postValue发送数据流程
+    - 1
+- liveData.observe(this , observe)监听数据流程
+    - 1
 
 
 
