--- a/Read/ReadMeWiki/08.思考系列/11.Jetpack设计思想反思.md
+++ b/Read/ReadMeWiki/08.思考系列/11.Jetpack设计思想反思.md
@@ -70,6 +70,7 @@
     - 如果`view`的父布局不为空，则拿到父布局的id和当前`fragment`的id是否相同，如果相同则设置给父布局标签和控制器。
     - 注意Navigation.setViewNavController(view, mNavController)，这个是将view(这个View是NavHostFragment的根布局)和NavController绑定起来，通用tag标签。
 
+
 ##### 2.3.2 `nav_graph`导航结构图如何解析
 - 1.NavHostFragment#onInflate()，主要是解析自定义属性。
     - 这个里面获取了给`NavHostFragment`容器设置的`defaultNavHost`属性，还有获取`navGraph`属性(对应是graph文件的id)
@@ -152,15 +153,38 @@
 - 如何设计LiveData资源共享？
     - 1
 - 如何设计生命周期活跃状态才通知数据变化刷新？
-    - 第一点：在发送数据后遍历监听者刷新时，会判断observer是否是活跃的状态(是否是非CREATE状态)。如果是非活跃状态则过滤！
+    - 第一点：在发送数据后遍历监听者刷新时，会判断observer是否是活跃的状态(是否是非CREATE状态)。如果是非活跃状态则过滤，通过shouldBeActive过滤！
+    - 针对 observerForever() 不会受到 Activity 等组件的生命周期的影响，只要数据更新就会收到通知。具体看AlwaysActiveObserver类，设置shouldBeActive一直是true状态。
 
 
 
 #### 5.3 LiveData原理流程
-- setValue/postValue发送数据流程
-    - 1
-- liveData.observe(this , observe)监听数据流程
-    - 1
+#### 5.3.1 setValue/postValue发送数据流程
+> LiveData#setValue()，直接更新数据。
+    - mVersion++，mVersion，每次更新数据都会自增，默认值是 -1。
+    - dispatchingValue(null)，调用dispatchingValue(null)传递了空对象，这个时候的流程则会通知 active 的mObservers
+> LiveData#considerNotify()，刷新数据变化
+    - 每个新的订阅者，其version都是-1，LiveData一旦设置过其version是大于-1的，这样就会导致LiveDataBus每注册一个新的订阅者，这个订阅者立刻会收到一个回调，即使这个设置的动作发生在订阅之前。
+- 那么发送消息事件之后的触发流程是怎样的？
+    - setValue ——> dispatchingValue(null) ——> considerNotify（注意，这里是个for迭代器循环，表示通知所有观察者） ——> onChanged
+
+
+
+
+#### 5.3.2 liveData.observe(this , observe)监听数据流程
+> LiveData#observe()，添加注册监听
+    - owner.getLifecycle().getCurrentState() == DESTROYED，当前绑定的组件(activity或者fragment)状态为DESTROYED的时候, 则会忽视当前的订阅请求，也就是忽略owner的注册；
+    - new LifecycleBoundObserver(owner, observer)，将数据观测者(Observer)包装注册到生命周期的观测者中
+    - mObservers.putIfAbsent(observer, wrapper)，将观测者包装类和观察者存放到Map集合里
+    - owner.getLifecycle().addObserver(wrapper)，获取owner(一般拿到的是activity或者fragment)的Lifecycle对象
+> LifecycleBoundObserver#()，来看一下将观察者放到包装类中做了什么
+    - LifecycleBoundObserver对象, 它继承于ObserverWrapper, 并最终实现了GenericLifecycleObserver接口；
+    - LifecycleBoundObserver#onStateChanged()，在发生状态转换事件时，会调用onStateChanged方法，如果是DESTROYED状态，则先要移除观察者，然后在取到生命周期状态变更事件
+    - LifecycleBoundObserver#onStateChanged()#activeStateChanged，会刷新活跃状态的回调
+> ObserverWrapper#activeStateChanged()，这个方法主要是做事件分发
+    - LiveData#dispatchingValue(this)，这个方法是调用considerNotify去刷新状态。传入了this ，也就是 LifecycleBoundObserver ，这时候不为 null 。也就是说生命周期改变触发的流程就是这种情况，这种情况下，只会通知跟该 Owner 绑定的 Observer。
+- 那么注册观察者之后的触发流程是怎样的？
+    - observe ——> onStateChanged ——> activeStateChanged ——> dispatchingValue ——> considerNotify ——> onChanged
 
 
 
